# cpptool-proto

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  build.gradle
cmake/: ProtobufExtend.cmake
def/: base.proto  classes.proto  funcs.proto  misc.proto  tmpl.proto  vars.proto  wrapper.proto
